Feat: 포인트 repository 구현